--- a/pom.xml
+++ b/pom.xml
@@ -48,19 +48,18 @@
 
 	<build>
 		<sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
-		<!-- <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory> -->
 		<pluginManagement>
 			<plugins>
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
-					<executions>
-						<execution>
-							<goals>
-								<goal>repackage</goal>
-							</goals>
-						</execution>
-					</executions>
+<!-- 					<executions> -->
+<!-- 						<execution> -->
+<!-- 							<goals> -->
+<!-- 								<goal>repackage</goal> -->
+<!-- 							</goals> -->
+<!-- 						</execution> -->
+<!-- 					</executions> -->
 				</plugin>
 			</plugins>
 		</pluginManagement>
