--- a/py-service/src/main/resources/database.properties
+++ b/py-service/src/main/resources/database.properties
@@ -1,7 +1,7 @@
 #==== connect to mysql ======#
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/py_foods?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12328302?useSSL=false
+spring.datasource.username=sql12328302
+spring.datasource.password=fzEKsceqTX
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
