- api - create api for get product detail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.username=sql12328302
 spring.datasource.password=fzEKsceqTX
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+#=== static configuration ================
+py.picture.domain=http://res.cloudinary.com
+py.picture.bucket=/dathandsome/image/upload/v1584630589
