- api - create api for get product detail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #=== static configuration ================
 py.picture.domain=http://res.cloudinary.com
 py.picture.bucket=/dathandsome/image/upload/v1584630589
+
+# picture host config
+cloudinary.api_key=
+cloudinary.api_secret=
+cloudinary.cloud_name=
