--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 #==== connect to mysql ======#
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12328302?useSSL=false
-spring.datasource.username=sql12328302
-spring.datasource.password=fzEKsceqTX
+spring.datasource.url=jdbc:mysql://remotemysql.com:3306/87Xam2kfai?useSSL=false
+spring.datasource.username=87Xam2kfai
+spring.datasource.password=FoZcOyuiGN
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-#=== static configuration ================
-py.picture.domain=http://res.cloudinary.com
-py.picture.bucket=/dathandsome/image/upload/v1584630589
+spring.jpa.properties.hibernate.format_sql=true
+# logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # picture host config
-cloudinary.api_key=
-cloudinary.api_secret=
-cloudinary.cloud_name=
+cloudinary.api_key=112536564139945
+cloudinary.api_secret=_HdfWcxxWGMS-DPy1sWfwohHWew
+cloudinary.cloud_name=dathandsome
+
+py.picture.domain=http://res.cloudinary.com
+py.picture.bucket=/dathandsome/image/upload/v1584630589
