--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #==== connect to mysql ======#
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/87Xam2kfai?useSSL=false
+spring.datasource.url=jdbc:mysql://remotemysql.com:3306/87Xam2kfai?useSSL=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=87Xam2kfai
 spring.datasource.password=FoZcOyuiGN
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.format_sql=true
 # logging
