--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
 							<artifactId>mapstruct-processor</artifactId>
 							<version>1.2.0.Final</version>
 						</path>
+						<path>
+            						<groupId>org.projectlombok</groupId>
+            						<artifactId>lombok</artifactId>
+            						<version>1.16.20</version>
+          					</path>
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
