--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,14 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
-
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.security</groupId> -->
+<!-- 			<artifactId>spring-security-web</artifactId> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.security</groupId> -->
+<!-- 			<artifactId>spring-security-config</artifactId> -->
+<!-- 		</dependency> -->
 	</dependencies>
 
 	<build>
@@ -95,9 +102,9 @@
 							<version>1.2.0.Final</version>
 						</path>
 						<path>
-       						<groupId>org.projectlombok</groupId>
-       						<artifactId>lombok</artifactId>
-       						<version>1.16.20</version>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.16.20</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
